modifications des images et de la navbar (vite fait)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            
         <h1>TROMBINOSCOPE SACOD</h1>
         
-        <img src = "images/original.png">
+        <img src = "images/original.png" id="wcsLogo">
     </nav>
 </header>
 
@@ -30,17 +30,17 @@
         <button class="slider__nav__button slider__nav__button__next">Suivant</button>
 
         <div class="slider__content__item">
-            <img src="images/Baptiste Save.jpg">
-            </div>
-            <div class="slider__content__item">
-                <img src="images/Morgane Debarge.jpg">
-                </div>
-                <div class="slider__content__item">
-                    <img src="images/Océane Lahoual.jpeg">
-                    </div>
-                    <div class="slider__content__item">
-                        <img src="images/Sébastien lacour.jpg">
-                        </div>
+            <img src="images/Baptiste_Save.jpg">
+        </div>
+        <div class="slider__content__item">
+            <img src="images/Morgane_Debarge.jpg">
+        </div>
+        <div class="slider__content__item">
+            <img src="images/Baris_Gunay.jpg">
+        </div>
+        <div class="slider__content__item">
+            <img src="images/Sebastien_lacour.jpg">
+        </div>
     </div>
     </div>
 
