ajout de la fonctionnalité de la search bar

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     
     <div id="search-bar">
-        <input type="text" onkeyup="search_wilder()" placeholder="Search name.." name="name">
+        <input type="text" onkeyup="search_wilder()" placeholder="Search name.." name="name" id="search-bar-input">
         <button type="submit"><img src="images/🦆icon_search_.png" alt="Bouton recherche"></button> 
         
     </div>  
