--- a/index.html
+++ b/index.html
@@ -11,13 +11,9 @@
     <title>Trombinoscope</title>
 </head>
 
-<style>
-    .light{
-      background-color: aliceblue;
-    }
-</style>
 
-<body>
+<body class="color">
+  
     <header>
         <nav>
             <ul id="navbar_list">
@@ -138,9 +134,9 @@
             <h3>Sebastien LACOUR</h3>
           </div>
         </section>
-
-    </main>
-
+        
+     </main>
+     <div id="overlay"></div>
     <footer> &copy; Oro Jackson - P1 </footer>
     <script src="script.js"></script>
 </body>
