Fix bug photo Jeremy

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           </div>
           
           <div class="people">
-            <img src="/images/Jérémy_Illien.png" alt="" class="media-imgs">
+            <img src="/images/Jeremy_Illien.png" alt="" class="media-imgs">
             <h3>Jérémy ILLIEN</h3>
           </div>
         </section>
